NetBSD Problem Report #16231

Received: (qmail 11272 invoked from network); 7 Apr 2002 15:13:10 -0000
Message-Id: <Pine.SOL.4.33.0204071606010.3600-100000@draco.cus.cam.ac.uk>
Date: Sun, 7 Apr 2002 16:13:09 +0100 (BST)
From: Ben Harris <bjh21@netbsd.org>
Sender: Ben Harris <bjh21@cus.cam.ac.uk>
To: <gnats-bugs@gnats.netbsd.org>
Subject: kdump build fails on m68k

>Number:         16231
>Category:       port-m68k
>Synopsis:       kdump build fails on m68k
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-m68k-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 07 15:14:00 +0000 2002
>Closed-Date:    Mon Apr 08 13:28:10 +0000 2002
>Last-Modified:  Mon Apr 08 13:28:10 +0000 2002
>Originator:     Ben Harris
>Release:        2002-04-05
>Organization:
>Environment:
Cross-compile from Debian GNU/Linux 2.2

>Description:
When building kdump for m68k, the following happens:

/u1/ben/netbsd/tools/bin/m68k--netbsdelf-gcc -O2  -Wall -Wstrict-prototypes -Wmissing-prototypes -Wpointer-arith -Wno-uninitialized  -Werror  -I/u1/ben/netbsd/src/usr.bin/kdump/../ktrace -I/u1/ben/netbsd/src/usr.bin/kdump/../../sys -nostdinc -isystem /u1/ben/netbsd/dest.next68k/usr/include  -c /u1/ben/netbsd/src/usr.bin/kdump/setemul.c
cc1: warnings being treated as errors
In file included from /u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/common/linux_siginfo.h:46,
                 from /u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/common/linux_types.h:100,
                 from /u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/common/linux_signo.c:44,
                 from /u1/ben/netbsd/src/usr.bin/kdump/setemul.c:137:
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:51: warning: no semicolon at end of struct or union
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:51: parse error before `.'
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:52: parse error before `.'
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:53: parse error before `.'
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:96: parse error before `}'
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:96: warning: type defaults to `int' in declaration of `linux_siginfo_t'
/u1/ben/netbsd/src/usr.bin/kdump/../../sys/compat/linux/arch/m68k/linux_siginfo.h:96: warning: data definition has no type or storage class
*** Error code 1

Stop.
nbmake: stopped in /u1/ben/netbsd/src/usr.bin/kdump

As far as I can see, this is caused by there being marcos in
sys/compat/svr4/svr4_siginfo.h whose names clash with those of structure
elements in sys/compat/linux/arch/m68k/linux_siginfo.h.

Klaus Heinz has reported the same problem when cross-compiling from
NetBSD/i386.  See
<URL:http://mail-index.netbsd.org/current-users/2002/04/06/0005.html>

>How-To-Repeat:
	MACHINE=next68k
        sh build.sh \
                -U -m $MACHINE \
                -T /u1/ben/netbsd/tools \
                -O /u1/ben/netbsd/obj.$MACHINE \
                -D /u1/ben/netbsd/dest.$MACHINE \
                -R /u1/ben/netbsd/release.$MACHINE \
                > build.log.$MACHINE 2>&1

>Fix:



>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed 
State-Changed-By: christos 
State-Changed-When: Mon Apr 8 09:27:58 EDT 2002 
State-Changed-Why:  
Fixed, thanks 
>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.