PR/16231: Ben Harris: m68k does not compile.